--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -10,25 +10,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: 'npm'
 
-      - name: Create env file
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Create .env file
         run: |
           echo "SERVICE_ID=${{ secrets.SERVICE_ID }}" >> .env
           echo "TEMPLATE_ID=${{ secrets.TEMPLATE_ID }}" >> .env
           echo "PUBLIC_KEY=${{ secrets.PUBLIC_KEY }}" >> .env
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Debug env file
+        run: cat .env
 
       - name: Build project
-        run: npm run build:prod
+        run: npm run build:ci
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
