--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"analyzer": "webpack --env mode=production",
 		"build:dev": "webpack --env mode=development",
 		"build:prod": "webpack --env mode=production --env analyzer=true",
+		"build:ci": "webpack --env mode=production --env analyzer=false",
 		"deploy": "gh-pages -d dist"
 	},
 	"devDependencies": {
